@@ -68,7 +68,7 @@ class EU3Regiment // also Ship
 class EU3Army // also Navy
 {
 	public:
-		EU3Army(const CK2Army* srcArmy, const inverseProvinceMapping inverseProvinceMap, const string infantryType, const string cavalryType, map<int, EU3Province*> provinces);
+		EU3Army(const CK2Army* srcArmy, const inverseProvinceMapping inverseProvinceMap, const string infantryType, const string cavalryType, map<int, EU3Province*> provinces, double& manpower);
 
 		int	getNumRegiments()	const { return regiments.size(); };
 
